--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       "name": "खिलाड़ी चाय | Khiladi Chai Jalori Gate",
       "description": "₹5 चाय पैक उपलब्ध! जलोरी गेट जोधपुर का सबसे सस्ता चाय ठेला।",
       "url": "https://khiladichai.github.io",
-      "telephone": "+91-98290XXXXX",
+      "telephone": "+91-9784433464",
       "image": "https://images.unsplash.com/photo-1577968897966-7d7de7aa8e82",
       "address": {
         "@type": "PostalAddress",
@@ -64,7 +64,7 @@
 
 <body>
     <!-- WhatsApp Chat Button -->
-    <a href="https://wa.me/9198290XXXXX?text=खिलाड़ी%20चाय%20₹5%20पैक%20ऑर्डर%20करना%20है" class="whatsapp-float" target="_blank">
+    <a href="https://wa.me/919784433464?text=खिलाड़ी%20चाय%20₹5%20पैक%20ऑर्डर%20करना%20है" class="whatsapp-float" target="_blank">
         <i class="fab fa-whatsapp whatsapp-icon"></i>
     </a>
 
@@ -107,7 +107,7 @@
                             <p class="voice-search">Voice Search: "chai pack 5 INR Jalori Gate" "खिलाड़ी चाय 5 रुपये"</p>
                             <div class="hero-buttons">
                                 <a href="#menu" class="cta-btn primary">मेन्यू देखें</a>
-                                <a href="tel:+9198290XXXXX" class="cta-btn secondary">अभी कॉल करें</a>
+                                <a href="tel:+919784433464" class="cta-btn secondary">अभी कॉल करें</a>
                             </div>
                         </div>
                     </div>
@@ -127,7 +127,7 @@
                             <h2>सुबह 6 से रात 11 तक</h2>
                             <p>24x7 आपकी सेवा में</p>
                             <div class="hero-buttons">
-                                <a href="https://wa.me/9198290XXXXX" class="cta-btn primary">WhatsApp ऑर्डर</a>
+                                <a href="https://wa.me/919784433464" class="cta-btn primary">WhatsApp ऑर्डर</a>
                             </div>
                         </div>
                     </div>
@@ -264,8 +264,8 @@
                     <div class="contact-item">
                         <i class="fas fa-phone"></i>
                         <h3>फोन</h3>
-                        <p>+91-98290XXXXX</p>
-                        <a href="tel:+9198290XXXXX" class="call-btn">कॉल करें</a>
+                        <p>+91-9784433464</p>
+                        <a href="tel:+919784433464" class="call-btn">कॉल करें</a>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-clock"></i>
