--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         "https://images.unsplash.com/photo-1512568400610-3f3f73b5d4d9?w=800"
       ],
       "description": "Chai pack 5 INR photos. खिलाड़ी चाय जलोरी गेट के चाय पैक की images।",
-      "telephone": "+91-98290XXXXX",
+      "telephone": "+91-9784433464",
       "address": {"@type": "PostalAddress", "addressLocality": "जोधपुर", "addressRegion": "राजस्थान"}
     }
     </script>
@@ -107,7 +107,7 @@
 
 <body>
     <!-- WhatsApp Button with Chai Image -->
-    <a href="https://wa.me/9198290XXXXX?text=खिलाड़ी%20चाय%20₹5%20पैक%20photo%20देखा,%20ऑर्डर%20करना%20है" class="whatsapp-float" target="_blank">
+    <a href="https://wa.me/919784433464?text=खिलाड़ी%20चाय%20₹5%20पैक%20photo%20देखा,%20ऑर्डर%20करना%20है" class="whatsapp-float" target="_blank">
         <img src="https://images.unsplash.com/photo-1577968897966-7d7de7aa8e82?w=100&fit=crop" alt="₹5 चाय पैक" class="whatsapp-img" loading="lazy">
         <span>₹5</span>
     </a>
@@ -118,7 +118,7 @@
             <h2 style="color: #856404;">✅ खिलाड़ी चाय जलोरी गेट</h2>
             <img src="https://images.unsplash.com/photo-1577968897966-7d7de7aa8e82?w=400&fit=crop" alt="खिलाड़ी चाय ₹5 पैक photo" class="featured-img" loading="lazy">
             <p><strong>₹5 चाय पैक</strong> | जलोरी गेट | सुबह 6-रात 11</p>
-            <a href="tel:+9198290XXXXX" style="background: var(--primary); color: white; padding: 1rem 2.5rem; border-radius: 30px; text-decoration: none; font-weight: 700;">📞 अभी कॉल</a>
+            <a href="tel:+919784433464" style="background: var(--primary); color: white; padding: 1rem 2.5rem; border-radius: 30px; text-decoration: none; font-weight: 700;">📞 अभी कॉल</a>
         </div>
     </section>
 
@@ -137,7 +137,7 @@
             <p style="font-size: 1.4rem; margin-bottom: 2rem;">Voice: "chai pack 5 INR photos Jodhpur"</p>
             <div style="display: flex; gap: 1rem; justify-content: center; flex-wrap: wrap;">
                 <a href="#gallery" style="background: var(--primary); color: white; padding: 1.2rem 2.5rem; border-radius: 50px; text-decoration: none; font-weight: 600;">Photos देखें</a>
-                <a href="tel:+9198290XXXXX" style="background: transparent; color: white; border: 3px solid white; padding: 1.2rem 2.5rem; border-radius: 50px; text-decoration: none;">कॉल करें</a>
+                <a href="tel:+919784433464" style="background: transparent; color: white; border: 3px solid white; padding: 1.2rem 2.5rem; border-radius: 50px; text-decoration: none;">कॉल करें</a>
             </div>
         </div>
     </section>
@@ -256,7 +256,7 @@
     <footer style="background: #222; color: white; text-align: center; padding: 2rem 0;">
         <div class="container">
             <p>&copy; 2025 खिलाड़ी चाय जलोरी गेट | Chai Pack 5 INR Photos</p>
-            <p>📸 सभी photos | ☎️ 98290XXXXX | Voice: "chai pack 5 INR photos"</p>
+            <p>📸 सभी photos | ☎️ 9784433464 | Voice: "chai pack 5 INR photos"</p>
         </div>
     </footer>
 
